2003-11-20  Gray Watson  <gray@outside.256.com>

	* Added some more error code documentation.

	* Added ability to disable the LARGEST_ALLOCATION setting by
	defining it to be 0.

2003-11-18  Gray Watson  <gray@outside.256.com>

	* Released dmalloc version 5.2.4.

	* Fixed bug with check-fence and check-funcs interaction.  Thanks
	to John Hetherington.

2003-11-17  Gray Watson  <gray@outside.256.com>

	* Added support for rc shell.  Thanks to Michael Haardt.

	* Fixed a logfile NULL pointer printf.  Thanks to John
	Hetherington.

2003-10-17  Gray Watson  <gray@outside.256.com>

	* Fleshed out the error code documentation.

2003-10-06  Gray Watson  <gray@outside.256.com>

	* Fixed Makefile.in to properly refer to the documents directory.
	Whoops.  Thanks to Mike Castle.

2003-10-04  Gray Watson  <gray@outside.256.com>

	* Improved the docs about alias creation and usage.

2003-10-01  Gray Watson  <gray@outside.256.com>

	* Added testing for destructors in configure.

2003-09-29  Gray Watson  <gray@outside.256.com>

	* Releasing dmalloc version 5.2.3.

2003-09-12  Gray Watson  <gray@outside.256.com>

	* Added new GetEnvironmentVariableA Cygwin call.  Thanks to Rolf
	Banting.

2003-09-10  Gray Watson  <gray@outside.256.com>

	* Added quick checks for the constructor attribute.

2003-09-09  Gray Watson  <gray@outside.256.com>

	* Removed find_slot function in chunk.c since it was only used
	once.

2003-09-08  Gray Watson  <gray@outside.256.com>

	* Changed the configure script to define the HAVE_... include
	defines to 0 or 1.  Thanks to Brian Schreder.

	* Removed usage of environ (duh) from dmalloc_argv.c.  Thanks to
	Brian Schreder.

	* Added better dmalloc.h processing.

2003-09-08  Gray Watson  <gray@outside.256.com>

	* Releasing dmalloc version 5.2.2.

	* Added a Cygwin section to the manual.

	* Added GETENV_SAFE testing for Cygwin environments.

	* Added a new ERROR_NOT_START_BLOCK (30) errno for addresses which